# DB_loader

./: .gitattributes  .gitignore  CMakeLists.txt  DOC.md  DOC_RU.md  LICENSE  NeuralNetwork.cpp  NeuralNetwork.h  Patterns.cpp  Patterns.h  README.md  codeeditor.cpp  codeeditor.h  colorbutton.cpp  colorbutton.h  databaseconnection.cpp  databaseconnection.h  databasetask.cpp  databasetask.h  datastorage.cpp  datastorage.h  highlighter.cpp  highlighter.h  linenumberarea.cpp  linenumberarea.h  loaderwidnow.cpp  loaderwidnow.h  loaderwidnow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  oracledriver.cpp  oracledriver.h  replacedialog.cpp  replacedialog.h  replacedialog.ui  settingswindow.cpp  settingswindow.h  settingswindow.ui  (+8 more)
DBLoader CMake/: CMakeLists.txt  NeuralNetwork.cpp  NeuralNetwork.h  Patterns.cpp  Patterns.h  codeeditor.cpp  codeeditor.h  connectionmanager.cpp  connectionmanager.h  connectionmanager.ui  databaseconnection.cpp  databaseconnection.h  databasetask.cpp  databasetask.h  datastorage.cpp  datastorage.h  docwindow.cpp  docwindow.h  docwindow.ui  exportdialog.cpp  exportdialog.h  exportdialog.ui  highlighter.cpp  highlighter.h  importdialog.cpp  importdialog.h  importdialog.ui  linenumberarea.cpp  linenumberarea.h  loaderwidnow.cpp  loaderwidnow.h  loaderwidnow.ui  main.cpp  oracledriver.cpp  oracledriver.h  predictorwindow.cpp  predictorwindow.h  predictorwindow.ui  replacedialog.cpp  replacedialog.h  (+20 more)
DBLoader CMake/QXlsx-master/QXlsx/source/: xlsxworksheet.cpp
DBLoader CMake/lib/: SimpleMail3Qt6.lib
DBLoader CMake/lib/cmake/SimpleMail3Qt6/: SimpleMail3Qt6Targets.cmake
lib/cmake/SimpleMail3Qt6/: SimpleMail3Qt6Config.cmake  SimpleMail3Qt6ConfigVersion.cmake  SimpleMail3Qt6Targets-release.cmake
lib/pkgconfig/: SimpleMail3Qt6.pc
